--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <title>Document</title>
   </head>
   <body>
-    <header><p>HomePage</p></header>
-
+    <header>
+      <h1>Quiz-App</h1>
+    </header>
     <nav>
       <ul>
-        <li><a href="./bookmark.html"> Bookmark</a></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./bookmark.html"></a>Bookmarks</li>
+        <li><a href="./input.html"></a>add Question</li>
+        <li><a href="./profile.html"></a>Profile</li>
       </ul>
     </nav>
   </body>
