--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Technic Quiz-App - Home</title>
   </head>
   <body>
     <header>
-      <h1>Quiz-App</h1>
+      <h1>Technic Quiz-App</h1>
     </header>
-    <nav>
-      <ul>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./bookmark.html"></a>Bookmarks</li>
-        <li><a href="./input.html"></a>add Question</li>
-        <li><a href="./profile.html"></a>Profile</li>
-      </ul>
-    </nav>
+    <footer>
+      <nav>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./bookmark.html">Bookmarks</a></li>
+          <li><a href="./input.html">Question-add</a></li>
+          <li><a href="./profile.html">Profile</a></li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
