--- a/profile.html
+++ b/profile.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Technic Quiz-App - Profile</title>
   </head>
   <body>
-    <p>profile page</p>
+    <header>
+      <h1>Technic Quiz-App</h1>
+    </header>
+    <footer>
+      <nav>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./bookmark.html">Bookmarks</a></li>
+          <li><a href="./input.html">Question-add</a></li>
+          <li><a href="./profile.html">Profile</a></li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
