--- a/bookmark.html
+++ b/bookmark.html
@@ -11,13 +11,79 @@
     <header>
       <h1>Technic Quiz-App</h1>
     </header>
+    <main>
+      <article>
+        <button class="material-symbols-outlined">bookmark</button>
+        <h2>Question</h2>
+        <p class="question">
+          Question paragraph Lorem ipsum, dolor sit amet consectetur adipisicing
+          elit. Tenetur a, enim perspiciatis dolor reprehenderit eius, libero
+          impedit debitis odio asperiores iusto aliquid ipsam cum facere amet
+          aliquam illum quidem et!
+        </p>
+        <button class="button">Button text</button>
+        <p class="answer">
+          Answer paragraph Lorem ipsum, dolor sit amet consectetur adipisicing
+          elit. Tenetur a, enim perspiciatis dolor reprehenderit eius, libero
+          impedit debitis odio asperiores iusto aliquid ipsam cum facere amet
+          aliquam illum quidem et!
+        </p>
+        <ul class="tag-list">
+          <li>Tag 1</li>
+          <li>Tag 2</li>
+          <li>Tag 3</li>
+          <li>Tag 4</li>
+        </ul>
+      </article>
+      <article>
+        <button class="material-symbols-outlined">bookmark</button>
+        <h2>Question</h2>
+        <p class="question">
+          Question paragraph Lorem ipsum, dolor sit amet consectetur adipisicing
+          elit. Tenetur a, enim perspiciatis dolor reprehenderit eius, libero
+          impedit debitis odio asperiores iusto aliquid ipsam cum facere amet
+          aliquam illum quidem et!
+        </p>
+        <button class="button">Button text</button>
+        <p class="answer">
+          Answer paragraph Lorem ipsum, dolor sit amet consectetur adipisicing
+          elit. Tenetur a, enim perspiciatis dolor reprehenderit eius, libero
+          impedit debitis odio asperiores iusto aliquid ipsam cum facere amet
+          aliquam illum quidem et!
+        </p>
+        <ul class="tag-list">
+          <li>Tag 1</li>
+          <li>Tag 2</li>
+          <li>Tag 3</li>
+          <li>Tag 4</li>
+        </ul>
+      </article>
+    </main>
     <footer>
       <nav>
-        <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./bookmark.html">Bookmarks</a></li>
-          <li><a href="./input.html">Question-add</a></li>
-          <li><a href="./profile.html">Profile</a></li>
+        <ul class="navigation">
+          <li>
+            <a href="./index.html"
+              ><span class="material-symbols-outlined"> home </span></a
+            >
+          </li>
+          <li class="current">
+            <a href="./bookmark.html"
+              ><span class="material-symbols-outlined"> bookmark </span></a
+            >
+          </li>
+          <li>
+            <a href="./input.html"
+              ><span class="material-symbols-outlined"> edit </span></a
+            >
+          </li>
+          <li>
+            <a href="./profile.html"
+              ><span class="material-symbols-outlined">
+                account_circle
+              </span></a
+            >
+          </li>
         </ul>
       </nav>
     </footer>
