--- a/input.html
+++ b/input.html
@@ -11,13 +11,46 @@
     <header>
       <h1>Technic Quiz-App</h1>
     </header>
+    <main>
+      <form aria-label="Create a new question card">
+        <label for="question">Add question (required)</label>
+        <textarea id="question" rows="5" required></textarea>
+
+        <label for="answer">Add answer (required)</label>
+        <textarea id="answer" rows="5" required></textarea>
+
+        <label for="tags">Add tags (required)</label>
+        <input id="tags" type="text" aria-describedby="add-tags" required />
+        <p id="add-tags">Add tags divided by comma.</p>
+
+        <button class="button" type="submit">Submit</button>
+      </form>
+    </main>
     <footer>
       <nav>
-        <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./bookmark.html">Bookmarks</a></li>
-          <li><a href="./input.html">Question-add</a></li>
-          <li><a href="./profile.html">Profile</a></li>
+        <ul class="navigation">
+          <li>
+            <a href="./index.html"
+              ><span class="material-symbols-outlined"> home </span></a
+            >
+          </li>
+          <li>
+            <a href="./bookmark.html"
+              ><span class="material-symbols-outlined"> bookmark </span></a
+            >
+          </li>
+          <li class="current">
+            <a href="./input.html"
+              ><span class="material-symbols-outlined"> edit </span></a
+            >
+          </li>
+          <li>
+            <a href="./profile.html"
+              ><span class="material-symbols-outlined">
+                account_circle
+              </span></a
+            >
+          </li>
         </ul>
       </nav>
     </footer>
