--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    />
+    <link rel="stylesheet" href="./style.css" />
+    <script type="module" src="./js/app.js"></script>
     <title>Technic Quiz-App - Home</title>
   </head>
   <body>
@@ -25,8 +22,8 @@
           impedit debitis odio asperiores iusto aliquid ipsam cum facere amet
           aliquam illum quidem et!
         </p>
-        <button class="button">Button text</button>
-        <p class="answer">
+        <button data-js="button1" class="button">KLICKMICH</button>
+        <p data-js="answer1" class="answer hidden">
           Answer paragraph Lorem ipsum, dolor sit amet consectetur adipisicing
           elit. Tenetur a, enim perspiciatis dolor reprehenderit eius, libero
           impedit debitis odio asperiores iusto aliquid ipsam cum facere amet
