--- a/index.html
+++ b/index.html
@@ -5,14 +5,94 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <script type="module" src="./js/app.js"></script>
+    <script type="module" src="./app.js" defer></script>
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <title>Technic Quiz-App - Home</title>
   </head>
   <body>
     <header>
-      <h1>Technic Quiz-App</h1>
+      <h1>Quiz-App</h1>
     </header>
-    <main>
+    <!-- HOME SEITE -->
+    <main data-js="site__home">
+      <!-- Frage 1 -->
+      <article class="card">
+        <button data-js="bookmark" class="material-icons card__bookmark">
+          bookmark
+        </button>
+        <h2>Question 1</h2>
+        <p class="question">
+          Question paragraph Lorem ipsum, dolor sit amet consectetur adipisicing
+          elit. Tenetur a, enim perspiciatis dolor reprehenderit eius, libero
+          impedit debitis odio asperiores iusto aliquid ipsam cum facere amet
+          aliquam illum quidem et!
+        </p>
+        <button data-js="button" class="card__button">KLICKMICH</button>
+        <p data-js="answer" class="card__answer hidden">
+          Answer paragraph Lorem ipsum, dolor sit amet consectetur adipisicing
+          elit. Tenetur a, enim perspiciatis dolor reprehenderit eius, libero
+          impedit debitis odio asperiores iusto aliquid ipsam cum facere amet
+          aliquam illum quidem et!
+        </p>
+        <ul class="card__tag-list">
+          <li>Tag 1</li>
+          <li>Tag 2</li>
+          <li>Tag 3</li>
+          <li>Tag 4</li>
+        </ul>
+      </article>
+      <!-- Frage 2 -->
+      <article class="card">
+        <button data-js="bookmark" class="material-icons card__bookmark">
+          bookmark
+        </button>
+        <h2>Question 2</h2>
+        <p class="question">
+          Question paragraph Lorem ipsum, dolor sit amet consectetur adipisicing
+          elit. Tenetur a, enim perspiciatis dolor reprehenderit eius, libero
+          impedit debitis odio asperiores iusto aliquid ipsam cum facere amet
+          aliquam illum quidem et!
+        </p>
+        <button class="button">Button text</button>
+        <ul class="card__tag-list">
+          <li>Tag 1</li>
+          <li>Tag 2</li>
+          <li>Tag 3</li>
+          <li>Tag 4</li>
+        </ul>
+      </article>
+      <!-- Frage 3 -->
+      <article class="card">
+        <button data-js="bookmark" class="material-icons card__bookmark">
+          bookmark
+        </button>
+        <h2>Question 3</h2>
+        <p class="question">
+          Question paragraph Lorem ipsum, dolor sit amet consectetur adipisicing
+          elit. Tenetur a, enim perspiciatis dolor reprehenderit eius, libero
+          impedit debitis odio asperiores iusto aliquid ipsam cum facere amet
+          aliquam illum quidem et!
+        </p>
+        <button class="card__button">Button text</button>
+        <p class="answer">
+          Answer paragraph Lorem ipsum, dolor sit amet consectetur adipisicing
+          elit. Tenetur a, enim perspiciatis dolor reprehenderit eius, libero
+          impedit debitis odio asperiores iusto aliquid ipsam cum facere amet
+          aliquam illum quidem et!
+        </p>
+        <ul class="card__tag-list">
+          <li>Tag 1</li>
+          <li>Tag 2</li>
+          <li>Tag 3</li>
+          <li>Tag 4</li>
+        </ul>
+      </article>
+    </main>
+    <!-- BOOKMARK SEITE -->
+    <main data-js="site__bookmarks">
       <article>
         <button class="material-symbols-outlined">bookmark</button>
         <h2>Question</h2>
@@ -22,30 +102,13 @@
           impedit debitis odio asperiores iusto aliquid ipsam cum facere amet
           aliquam illum quidem et!
         </p>
-        <button data-js="button1" class="button">KLICKMICH</button>
-        <p data-js="answer1" class="answer hidden">
+        <button class="button">Button text</button>
+        <p class="answer">
           Answer paragraph Lorem ipsum, dolor sit amet consectetur adipisicing
           elit. Tenetur a, enim perspiciatis dolor reprehenderit eius, libero
           impedit debitis odio asperiores iusto aliquid ipsam cum facere amet
           aliquam illum quidem et!
         </p>
-        <ul class="tag-list">
-          <li>Tag 1</li>
-          <li>Tag 2</li>
-          <li>Tag 3</li>
-          <li>Tag 4</li>
-        </ul>
-      </article>
-      <article>
-        <button class="material-symbols-outlined not-selected">bookmark</button>
-        <h2>Question</h2>
-        <p class="question">
-          Question paragraph Lorem ipsum, dolor sit amet consectetur adipisicing
-          elit. Tenetur a, enim perspiciatis dolor reprehenderit eius, libero
-          impedit debitis odio asperiores iusto aliquid ipsam cum facere amet
-          aliquam illum quidem et!
-        </p>
-        <button class="button">Button text</button>
         <ul class="tag-list">
           <li>Tag 1</li>
           <li>Tag 2</li>
@@ -77,32 +140,77 @@
         </ul>
       </article>
     </main>
+    <!-- INPUT SEITE -->
+    <main data-js="site__input">
+      <form aria-label="Create a new question card">
+        <label for="question">Add question (required)</label>
+        <textarea id="question" rows="5" required></textarea>
+
+        <label for="answer">Add answer (required)</label>
+        <textarea id="answer" rows="5" required></textarea>
+
+        <label for="tags">Add tags (required)</label>
+        <input id="tags" type="text" aria-describedby="add-tags" required />
+        <p id="add-tags">Add tags divided by comma.</p>
+
+        <button class="button" type="submit">Submit</button>
+      </form>
+    </main>
+    <!-- PROFILE SEITE -->
+    <main data-js="site__profile">
+      <section class="profile__header">
+        <img
+          class="profile__image"
+          src="https://images.pexels.com/photos/5122188/pexels-photo-5122188.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          alt="Profile image"
+        />
+        <h2>Firstname Lastname</h2>
+      </section>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga
+        perferendis tempora voluptatem blanditiis voluptate illum placeat amet
+        excepturi ut dolor soluta vero, est at iste temporibus nemo porro beatae
+        sed!
+      </p>
+      <h3>Skills</h3>
+      <ul class="tag-list">
+        <li>Tag 1</li>
+        <li>Tag 2</li>
+        <li>Tag 3</li>
+        <li>Tag 4</li>
+      </ul>
+      <button class="button">Logout</button>
+    </main>
     <footer>
-      <nav>
-        <ul class="navigation">
-          <li class="current">
-            <a href="./index.html"
-              ><span class="material-symbols-outlined"> home </span></a
-            >
-          </li>
-          <li>
-            <a href="./bookmark.html"
-              ><span class="material-symbols-outlined"> bookmark </span></a
-            >
-          </li>
-          <li>
-            <a href="./input.html"
-              ><span class="material-symbols-outlined"> edit </span></a
-            >
-          </li>
-          <li>
-            <a href="./profile.html"
-              ><span class="material-symbols-outlined">
-                account_circle
-              </span></a
-            >
-          </li>
-        </ul>
+      <nav class="navigation">
+        <button
+          data-js="nav__button"
+          data-input="Home"
+          class="material-symbols-outlined nav__button current"
+        >
+          home
+        </button>
+        <button
+          data-js="nav__button"
+          data-input="Home"
+          class="material-symbols-outlined nav__button"
+        >
+          bookmarks
+        </button>
+        <button
+          data-js="nav__button"
+          data-input="Home"
+          class="material-symbols-outlined nav__button"
+        >
+          add
+        </button>
+        <button
+          data-js="nav__button"
+          data-input="Home"
+          class="material-symbols-outlined nav__button"
+        >
+          account_circle
+        </button>
       </nav>
     </footer>
   </body>
